--- a/Gromacs/1_autorun_gmx/V2/1_pdb-to-gro.ipynb
+++ b/Gromacs/1_autorun_gmx/V2/1_pdb-to-gro.ipynb
@@ -5,15 +5,7 @@
    "execution_count": 1,
    "id": "d3e3078b-7373-4abd-8b79-c207dc1825d7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Warning: importing 'simtk.openmm' is deprecated.  Import 'openmm' instead.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import mdtraj as md \n",
     "import subprocess"
@@ -21,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "36aa0d71",
    "metadata": {},
    "outputs": [],
@@ -32,6 +24,10 @@
     "        0. Not protonated (charge -1) (ASP)\n",
     "        1. Protonated (charge 0) (ASPP)\n",
     "    \n",
+    "    GLU:\n",
+    "        0. Not protonated (charge -1) (GLU)\n",
+    "        1. Protonated (charge 0) (GLH)\n",
+    "\n",
     "    HIS:\n",
     "        0. H on ND1 only (HSD)\n",
     "        1. H on NE2 only (HSE)\n",
@@ -55,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = md.load_pdb('./apo_4XYJ_MD.pdb')\n",
+    "t = md.load_pdb('')\n",
     "gmx_options = ['1\\n', '1\\n'] # force filed: charmm, water: CHARMM-modified TIP3P \n",
     "for chain in t.topology.chains:\n",
     "    gmx_options += assign_protonation(chain, 'ASP', '1', [177, 318, 682])\n",
@@ -97,7 +93,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.3 ('base')",
+   "display_name": "Python 3.10.4 ('MD')",
    "language": "python",
    "name": "python3"
   },
@@ -111,11 +107,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.10.4"
   },
   "vscode": {
    "interpreter": {
-    "hash": "24db5977c3e84ede481057a04ff7968641548534752e5fed74490ef633bae3fc"
+    "hash": "5887bc237414c1bd1f360d25e0e96ea42f84a643c60b529b66276dba543596a0"
    }
   }
  },
