modify the pka check

--- a/Gromacs/1_autorun_gmx/V2/00_check_pka.ipynb
+++ b/Gromacs/1_autorun_gmx/V2/00_check_pka.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "id": "dd049558",
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('2pfk_cit13_alt_k_rx_0017_low_ABCD_protein.pka') as f:\n",
+    "with open('./1urp.pka') as f:\n",
     "        raw_data = f.readlines()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "id": "052eb6e0",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "id": "a11d7f8b",
    "metadata": {},
    "outputs": [],
@@ -47,23 +47,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "8550408d",
    "metadata": {},
    "outputs": [],
    "source": [
     "def find_unusual_pka(data, pH=7.4):\n",
+    "    print('Res    Resid    Chain    pKa    model-pKa')\n",
     "    for line in data:\n",
-    "        if float(line[3]) < pH and pH< float(line[4]):\n",
+    "        if float(line[3]) < pH < float(line[4]):\n",
     "            print(line)\n",
-    "        elif float(line[3]) > pH and pH > float(line[4]):\n",
+    "        elif float(line[3]) > pH > float(line[4]):\n",
     "            print(line)\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "id": "634065fd",
    "metadata": {},
    "outputs": [],
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "id": "c65315ba",
    "metadata": {},
    "outputs": [
@@ -81,18 +82,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['ASP', '130', 'A', '8.19', '3.80']\n",
-      "['ASP', '156', 'A', '7.45', '3.80']\n",
-      "['ASP', '13', 'B', '7.88', '3.80']\n",
-      "['ASP', '130', 'B', '8.82', '3.80']\n",
-      "['ASP', '130', 'C', '7.71', '3.80']\n",
-      "['GLU', '168', 'A', '8.89', '4.50']\n",
-      "['GLU', '168', 'B', '8.06', '4.50']\n",
-      "['GLU', '290', 'B', '8.09', '4.50']\n",
-      "['GLU', '168', 'C', '8.08', '4.50']\n",
-      "['GLU', '168', 'D', '9.04', '4.50']\n",
-      "['GLU', '290', 'D', '8.00', '4.50']\n",
-      "['LYS', '214', 'D', '6.87', '10.50']\n"
+      "Res    Resid    Chain    pKa    model-pKa\n",
+      "['GLU', '128', 'D', '7.46', '4.50']\n",
+      "['HIS', '152', 'A', '7.82', '6.50']\n",
+      "['HIS', '152', 'C', '7.81', '6.50']\n",
+      "['HIS', '152', 'D', '7.64', '6.50']\n"
      ]
     }
    ],
