--- a/Gromacs/1_autorun_gmx/V2/1_pdb-to-gro.ipynb
+++ b/Gromacs/1_autorun_gmx/V2/1_pdb-to-gro.ipynb
@@ -87,13 +87,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "subprocess.run('cat pdb2gmx_option.txt | xargs -I echo| gmx pdb2gmx -f apo_4XYJ_MD.pdb -o apo_4XYJ_MD_conf.pdb -asp -his > pdb2gmx.log', shell=True)"
+    "subprocess.run('cat pdb2gmx_option.txt | xargs -I opt echo opt | gmx pdb2gmx -f apo_4XYJ_MD.pdb -o apo_4XYJ_MD_conf.pdb -asp -his > pdb2gmx.log', shell=True)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.4 ('MD')",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -107,11 +107,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
   },
   "vscode": {
    "interpreter": {
-    "hash": "5887bc237414c1bd1f360d25e0e96ea42f84a643c60b529b66276dba543596a0"
+    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
    }
   }
  },
