--- a/Openmm/openmm_gmx/V2/README
+++ b/Openmm/openmm_gmx/V2/README
@@ -8,15 +8,15 @@
 # You can get the latest development version of OpenMM at the git repository:
 # https://github.com/pandegroup/openmm
 
-set init = step3_input
-set equi_prefix = step4_equilibration
-set prod_prefix = step5_production
-set prod_step   = step5
-set num_rep = 58
+#set init = step3_input
+#set equi_prefix = step4_equilibration
+#set prod_prefix = step5_production
+#set prod_step   = step5
+#set num_rep = 58
 
 # Equilibration
-set input_param = "-t toppar.str -p ${init}.psf -c ${init}.crd -b sysinfo.dat"
-python -u openmm_run.py -i ${equi_prefix}.inp ${input_param} -orst ${equi_prefix}.rst -odcd ${equi_prefix}.dcd > ${equi_prefix}.out
+#set input_param = "-t toppar.str -p ${init}.psf -c ${init}.crd -b sysinfo.dat"
+#python -u openmm_run.py -i ${equi_prefix}.inp ${input_param} -orst ${equi_prefix}.rst -odcd ${equi_prefix}.dcd > ${equi_prefix}.out
 
 
 
